  [29490] alpha: New __brk_call implementation is broken
  [29463] math/test-float128-y1 fails on x86_64
  [29528] elf: Call __libc_early_init for reused namespaces
  [29537] libc: [2.34 regression]: Alignment issue on m68k when using
  [29539] libc: LD_TRACE_LOADED_OBJECTS changed how vDSO library are
  [29583] Use 64-bit interfaces in gconv_parseconfdir
  [29607] nscd repeatably crashes calling __strlen_avx2 when hosts cache is
    enabled
  [29638] libc: stdlib: arc4random fallback is never used

Version 2.36

Major new features:

* Support for DT_RELR relative relocation format has been added to
  glibc.  This is a new ELF dynamic tag that improves the size of
  relative relocations in shared object files and position independent
  executables (PIE).  DT_RELR generation requires linker support for
  -z pack-relative-relocs option, which is supported for some targets
  in recent binutils versions.  Lazy binding doesn't apply to DT_RELR.

* On Linux, the pidfd_open, pidfd_getfd, and pidfd_send_signal functions
  have been added.  The pidfd functionality provides access to a process
  while avoiding the issue of PID reuse on tranditional Unix systems.

* On Linux, the process_madvise function has been added. It has the
  same functionality as madvise but alters the target process identified
  by the pidfd.

* On Linux, the process_mrelease function has been added.  It allows a
  caller to release the memory of a dying process.  The release of the
  memory is carried out in the context of the caller, using the caller's
  CPU affinity, and priority with CPU usage accounted to the caller.

* The “no-aaaa” DNS stub resolver option has been added.  System
  administrators can use it to suppress AAAA queries made by the stub
  resolver, including AAAA lookups triggered by NSS-based interfaces
  such as getaddrinfo.  Only DNS lookups are affected: IPv6 data in
  /etc/hosts is still used, getaddrinfo with AI_PASSIVE will still